client/styles/main.scss
/* ... */
//end intel-request

//start mission-mgt
.mission-mgt {
  margin:  0px 15px;
  margin-bottom: 10px;

  .header-line {
    overflow: hidden;
    margin-bottom: 0px;

    img {
      float: left;
      width: 42%;
      margin-top: 7px;
    }

    .full-line {
      width: 100%;
    }

    .header-text {
      float: left;
      width: 16%;
      text-align: center;
      text-transform: uppercase;
    }
  }

  .rc-calendar-disabled-cell .rc-calendar-date {
    cursor: not-allowed;
    color: #bcbcbc;
    border-radius: 0;
    width: auto;
  }
  a.highlighted-button.btn.filter {
    border: 1px solid #fff;
    color: #fff;
  }
  .filter-line {
    width: 100%;
    text-align: center;

    .each-select {
      margin-left: 5px;
      margin-right: 5px;
      display: inline-block;
      text-transform: uppercase;
      vertical-align: middle;

      .form-control {
        padding: 0 7px !important;
        color: #84a1e0;
        background-color: #0f2b3d;
        font-size: 12px;
        height: 25px;
        width: 165px;
        border-radius: 0px;
        text-transform: uppercase;
      }

      .date-pic {
        margin-left: 5px;
        margin-right: 5px;
        display: inline-block;
        vertical-align: text-bottom;

        input {
          width: 165px;
          padding-left: 5px;
          color: #84a1e0;
          background-color: #0f2b3d;
          font-size: 12px;
        }
        .calendar {
          display: inline-block;
          width: 16px;
          margin-top: -1px;
        }
      }

      .dropdown-toggle {
        padding: 5px;
        width: 100%;
        text-align: center;
        color: #afc5d3;
      }

      .dropdown-menu {
        margin: 0 5px 0 5px;
      }
    }

    .filter-button {
      margin-left: 5px;
      margin-right: 5px;
      display: inline-block;
    }
  }

  .special-instruction {
    font-size: 20px;
    color: #4a89bf;
    text-transform: uppercase;
    text-align: center;
    padding: 0px 35px 30px;
  }

  .instructors {
    font-size: 20px;
    color: #4a89bf;
    text-transform: uppercase;
    text-align: center;
    padding: 0px 35px 0px;

    .prepare-instructor {
      text-align: right;
      float: left;
      padding-right: 20px;

      .name-label {
        color: #afc5d3;
      }
    }

    .approve-instructor {
      text-align: left;
      float: left;
      padding-left: 20px;
      .name-label {
        color: #afc5d3;
      }
    }
  }
}
//end mission-mgt

// start schedule
.schedule {
  margin: 15px;
  margin-bottom: 47px;

  .schedule-views {
    text-align: center;

    .header-line {
      overflow: hidden;
      margin-bottom: 17px;

      img {
        float: left;
        width: 15%;
        margin-top: 7px;
      }

      .full-line {
        width: 100%;
      }

      .header-text {
        float: left;
        width: 70%;
        text-align: center;
        text-transform: uppercase;
      }
    }
    .view-element {
      display: inline-block;
      width: 20%;

      img {
        padding-top: 15px;
      }
    }
  }

  .schedule-filters {
    text-align: center;

    .header-line {
      overflow: hidden;
      margin-bottom: 27px;

      img {
        float: left;
        width: 35%;
        margin-top: 7px;
      }

      .full-line {
        width: 100%;
      }

      .header-text {
        float: left;
        width: 30%;
        text-align: center;
        text-transform: uppercase;
      }
    }

    .filter-element {
      display: inline-block;
      width: 25%;

      .form-control {
        padding: 0 7px !important;
        background: rgba(0, 0, 0, 0.01);
        height: 25px;
        width: 165px;
        border-radius: 0px;
        text-transform: uppercase;
      }

      .calendar {
        margin-left: -25px;
        height: 17px;
      }

      ul {
        width: 25%;
        .dropdown-menu {
          width: 300px !important;
          margin: 20px;
        }
      }

      input {
        width: 90% !important;
      }
    }
  }

  
  .schedule-manage {
    text-align: center;

    .header-line {
      overflow: hidden;
      margin-bottom: 27px;

      img {
        float: left;
        width: 40%;
        margin-top: 7px;
      }

      .full-line {
        width: 100%;
      }

      .header-text {
        float: left;
        width: 20%;
        text-align: center;
        text-transform: uppercase;
      }
    }

    .button-group {
      float: left;

      .action-buttons {
        display: inline-block;
        width: 98%;
        margin: 0px;
      }

      .line {
        width: 95%;
      }

      button {
        width: 91%;
      }
    }
  }

  .schedule-calander {
    margin-top: 37px;

    table {
      background-color: rgba(23, 34, 59, 0.01);

      thead {
        border: 0px !important;
      }

      td {
        padding: 5px 2px;
        img {
          height: 40px;
        }
        div {
          text-align: left;
        }
        .second-text {
          color: #aaa;
        }
      }
    }
  }
}

.orders-assets .filter-line .add-button .dropdown-menu {
  margin-left: 12px!important;
}
a.btn.btn-warning {
  border-radius: none!important;
  background: #ed7d31;
  border-radius: 0px;
  padding: 8px 30px;
  margin-bottom: 15px;
}
/* ... */

